Find bugs and exception warnings now enabled.